# rusty-telegram-gpt

./: .gitignore  Cargo.toml  Dockerfile  deploy.sh
bot_config/: dapconsult.json  vlotho.json
data/: vs_GKxymyy9y9UG5XjbxmVkpm6I_files_details.json  vs_GKxymyy9y9UG5XjbxmVkpm6I_summary.json  vs_pk7Qny1jtoOD6qJQwPeZRGhQ_files_details.json  vs_pk7Qny1jtoOD6qJQwPeZRGhQ_summary.json
src/: main.rs
