[package]
name = "telegram_openai_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
env_logger = "0.10"
log = "0.4"
once_cell = "1.17"   # For once_cell::sync::Lazy
regex = "1.11"       # For regex::Regex
